minijinja/tests/snapshots/test_compiler__codegen@indexing.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"hello\": \"Hällo Wörld\",\n  \"intrange\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n}\n---\n{{ hello[0] }}\n{{ hello[3] }}\n{{ hello[-1] }}\n{{ hello[999] is undefined }}\n{{ intrange[0] }}\n{{ intrange[3] }}\n{{ intrange[-1] }}\n{{ intrange[999] is undefined }}"
input_file: minijinja/tests/inputs/indexing.txt
---
(
    [
        00000 | EmitRaw("{\n  \"hello\": \"Hällo Wörld\",\n  \"intrange\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n}\n---\n")  [line 1],
        00001 | Lookup("hello")  [line 6],
        00002 | LoadConst(0),
        00003 | GetItem,
        00004 | Emit,
        00005 | EmitRaw("\n"),
        00006 | Lookup("hello")  [line 7],
        00007 | LoadConst(3),
        00008 | GetItem,
        00009 | Emit,
        00010 | EmitRaw("\n"),
        00011 | Lookup("hello")  [line 8],
        00012 | LoadConst(-1),
        00013 | GetItem,
        00014 | Emit,
        00015 | EmitRaw("\n"),
        00016 | Lookup("hello")  [line 9],
        00017 | LoadConst(999),
        00018 | GetItem,
        00019 | PerformTest("undefined", 1, 0),
        00020 | Emit,
        00021 | EmitRaw("\n"),
        00022 | Lookup("intrange")  [line 10],
        00023 | LoadConst(0),
        00024 | GetItem,
        00025 | Emit,
        00026 | EmitRaw("\n"),
        00027 | Lookup("intrange")  [line 11],
        00028 | LoadConst(3),
        00029 | GetItem,
        00030 | Emit,
        00031 | EmitRaw("\n"),
        00032 | Lookup("intrange")  [line 12],
        00033 | LoadConst(-1),
        00034 | GetItem,
        00035 | Emit,
        00036 | EmitRaw("\n"),
        00037 | Lookup("intrange")  [line 13],
        00038 | LoadConst(999),
        00039 | GetItem,
        00040 | PerformTest("undefined", 1, 0),
        00041 | Emit,
    ],
    {},
)
