minijinja/tests/snapshots/test_compiler__codegen@inexpr.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"seq\": [\n    1,\n    2,\n    3\n  ]\n}\n---\n{{ 1 in seq }}\n{{ \"missing\" in seq }}\n{{ 1 not in seq }}\n{{ \"missing\" not in seq }}"
input_file: minijinja/tests/inputs/inexpr.txt
---
(
    [
        00000 | EmitRaw("{\n  \"seq\": [\n    1,\n    2,\n    3\n  ]\n}\n---\n")  [line 1],
        00001 | LoadConst(1)  [line 9],
        00002 | Lookup("seq"),
        00003 | In,
        00004 | Emit,
        00005 | EmitRaw("\n"),
        00006 | LoadConst("missing")  [line 10],
        00007 | Lookup("seq"),
        00008 | In,
        00009 | Emit,
        00010 | EmitRaw("\n"),
        00011 | LoadConst(1)  [line 11],
        00012 | Lookup("seq"),
        00013 | In,
        00014 | Not,
        00015 | Emit,
        00016 | EmitRaw("\n"),
        00017 | LoadConst("missing")  [line 12],
        00018 | Lookup("seq"),
        00019 | In,
        00020 | Not,
        00021 | Emit,
    ],
    {},
)
