minijinja/tests/snapshots/test_compiler__codegen@int_rem_by_zero.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{{ 10 % 0 }}"
input_file: minijinja/tests/inputs/int_rem_by_zero.txt
---
(
    [
        00000 | EmitRaw("{}\n---\n")  [line 1],
        00001 | LoadConst(10)  [line 3],
        00002 | LoadConst(0),
        00003 | Rem,
        00004 | Emit,
    ],
    {},
)
