minijinja/tests/snapshots/test_compiler__codegen@literals.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{}\n---\n{{ true }}\n{{ false }}\n{{ null }}\n{{ 1.0 }}\n{{ 2 }}\n{{ [1, 2, 3] }}\n{{ {\"foo\": \"bar\"} }}\n{{ -9223372036854775808 }}\n{{ -170141183460469231731687303715884105728 }}\n{{ 170141183460469231731687303715884105727 }}\n{{ 340282366920938463463374607431768211455 }}"
input_file: minijinja/tests/inputs/literals.txt
---
(
    [
        00000 | EmitRaw("{}\n---\n")  [line 1],
        00001 | LoadConst(true)  [line 3],
        00002 | Emit,
        00003 | EmitRaw("\n"),
        00004 | LoadConst(false)  [line 4],
        00005 | Emit,
        00006 | EmitRaw("\n"),
        00007 | Lookup("null")  [line 5],
        00008 | Emit,
        00009 | EmitRaw("\n"),
        00010 | LoadConst(1.0)  [line 6],
        00011 | Emit,
        00012 | EmitRaw("\n"),
        00013 | LoadConst(2)  [line 7],
        00014 | Emit,
        00015 | EmitRaw("\n"),
        00016 | LoadConst([1, 2, 3])  [line 8],
        00017 | Emit,
        00018 | EmitRaw("\n"),
        00019 | LoadConst({"foo": "bar"})  [line 9],
        00020 | Emit,
        00021 | EmitRaw("\n"),
        00022 | LoadConst(-9223372036854775808)  [line 10],
        00023 | Emit,
        00024 | EmitRaw("\n"),
        00025 | LoadConst(170141183460469231731687303715884105728)  [line 11],
        00026 | Emit,
        00027 | EmitRaw("\n"),
        00028 | LoadConst(170141183460469231731687303715884105727)  [line 12],
        00029 | Emit,
        00030 | EmitRaw("\n"),
        00031 | LoadConst(340282366920938463463374607431768211455)  [line 13],
        00032 | Emit,
    ],
    {},
)
