minijinja/tests/snapshots/test_compiler__codegen@loop_dictsort.txt.snap
---
source: minijinja/tests/test_compiler.rs
description: "{\n  \"map\": {\n    \"foo\": 1,\n    \"bar\": 2,\n    \"baz\": 100,\n    \"Blafasel\": \"aha\"\n  }\n}\n---\nkey implied:\n{%- for key, value in map|dictsort %}\n* {{ key }}: {{ value }}\n{%- endfor %}\nkey explicit:\n{%- for key, value in map|dictsort(by=\"key\") %}\n* {{ key }}: {{ value }}\n{%- endfor %}\nvalue:\n{%- for key, value in map|dictsort(by=\"value\") %}\n* {{ key }}: {{ value }}\n{%- endfor %}\nreverse:\n{%- for key, value in map|dictsort(reverse=true) %}\n* {{ key }}: {{ value }}\n{%- endfor %}\ncase_sensitive:\n{%- for key, value in map|dictsort(case_sensitive=true) %}\n* {{ key }}: {{ value }}\n{%- endfor %}"
input_file: minijinja/tests/inputs/loop_dictsort.txt
---
(
    [
        00000 | EmitRaw("{\n  \"map\": {\n    \"foo\": 1,\n    \"bar\": 2,\n    \"baz\": 100,\n    \"Blafasel\": \"aha\"\n  }\n}\n---\nkey implied:")  [line 1],
        00001 | Lookup("map")  [line 11],
        00002 | ApplyFilter("dictsort", 1, 0),
        00003 | PushLoop(1),
        00004 | Iterate(15),
        00005 | UnpackList(2),
        00006 | StoreLocal("key"),
        00007 | StoreLocal("value"),
        00008 | EmitRaw("\n* "),
        00009 | Lookup("key")  [line 12],
        00010 | Emit,
        00011 | EmitRaw(": "),
        00012 | Lookup("value"),
        00013 | Emit,
        00014 | Jump(4),
        00015 | PopFrame,
        00016 | EmitRaw("\nkey explicit:")  [line 13],
        00017 | Lookup("map")  [line 15],
        00018 | LoadConst({"by": "key"}),
        00019 | ApplyFilter("dictsort", 2, 0),
        00020 | PushLoop(1),
        00021 | Iterate(32),
        00022 | UnpackList(2),
        00023 | StoreLocal("key"),
        00024 | StoreLocal("value"),
        00025 | EmitRaw("\n* "),
        00026 | Lookup("key")  [line 16],
        00027 | Emit,
        00028 | EmitRaw(": "),
        00029 | Lookup("value"),
        00030 | Emit,
        00031 | Jump(21),
        00032 | PopFrame,
        00033 | EmitRaw("\nvalue:")  [line 17],
        00034 | Lookup("map")  [line 19],
        00035 | LoadConst({"by": "value"}),
        00036 | ApplyFilter("dictsort", 2, 0),
        00037 | PushLoop(1),
        00038 | Iterate(49),
        00039 | UnpackList(2),
        00040 | StoreLocal("key"),
        00041 | StoreLocal("value"),
        00042 | EmitRaw("\n* "),
        00043 | Lookup("key")  [line 20],
        00044 | Emit,
        00045 | EmitRaw(": "),
        00046 | Lookup("value"),
        00047 | Emit,
        00048 | Jump(38),
        00049 | PopFrame,
        00050 | EmitRaw("\nreverse:")  [line 21],
        00051 | Lookup("map")  [line 23],
        00052 | LoadConst({"reverse": true}),
        00053 | ApplyFilter("dictsort", 2, 0),
        00054 | PushLoop(1),
        00055 | Iterate(66),
        00056 | UnpackList(2),
        00057 | StoreLocal("key"),
        00058 | StoreLocal("value"),
        00059 | EmitRaw("\n* "),
        00060 | Lookup("key")  [line 24],
        00061 | Emit,
        00062 | EmitRaw(": "),
        00063 | Lookup("value"),
        00064 | Emit,
        00065 | Jump(55),
        00066 | PopFrame,
        00067 | EmitRaw("\ncase_sensitive:")  [line 25],
        00068 | Lookup("map")  [line 27],
        00069 | LoadConst({"case_sensitive": true}),
        00070 | ApplyFilter("dictsort", 2, 0),
        00071 | PushLoop(1),
        00072 | Iterate(83),
        00073 | UnpackList(2),
        00074 | StoreLocal("key"),
        00075 | StoreLocal("value"),
        00076 | EmitRaw("\n* "),
        00077 | Lookup("key")  [line 28],
        00078 | Emit,
        00079 | EmitRaw(": "),
        00080 | Lookup("value"),
        00081 | Emit,
        00082 | Jump(72),
        00083 | PopFrame,
    ],
    {},
)
